fix text module default overflow hidden property

--- a/xprez/static/xprez/styles/scss/frontend/modules/_files.scss
+++ b/xprez/static/xprez/styles/scss/frontend/modules/_files.scss
@@ -1,4 +1,6 @@
 .xprez-files {
+    overflow: hidden;
+    
     .xprez-module-inner {
         flex: 1;
     }
