--- a/xprez/static/xprez/styles/scss/frontend/modules/_numbers.scss
+++ b/xprez/static/xprez/styles/scss/frontend/modules/_numbers.scss
@@ -2,6 +2,7 @@
 
 .xprez-numbers {
 	text-align: center;
+	overflow: hidden;
 
 	.xprez-module-inner {
 		flex: 1;
