--- a/xprez/static/xprez/styles/scss/frontend/modules/_text.scss
+++ b/xprez/static/xprez/styles/scss/frontend/modules/_text.scss
@@ -100,4 +100,9 @@
             }
         }
     }
+
+    .xprez-#{$number}-media-role-background,
+    .xprez-#{$number}-media-role-lead {
+        overflow: hidden;
+    }
 }
